crates/diskuse/tests/snapshots/in_b@linux-d4096-s0.snap
---
source: tests/browse.rs
---
/fixture  1.6 MiB | 2 folders unreadable (d) | scanned 0 s ago
  32.0 KiB+ b/         16.0 KiB  50.0% c/                                12.0 KiB  f3
   8.0 KiB  h1          8.0 KiB  25.0% f2
   8.0 KiB  h2          4.0 KiB  12.5% locked/ (denied: EACCES)
   4.0 KiB  f1













c/ | 16.0 KiB  own 16.0 KiB
hjkl move  i info  u units  space pick  p picks  r reveal  s/S rescan  / filter  ? help  q quit
--- styles ---
 0  10..17  BOLD
 0  17..20  DarkGray
 0  44..47  DarkGray
 1   0..12  White on DarkGray
 1  12..14  White on DarkGray BOLD
 1  14..20  White on DarkGray
 1  21..70  Indexed(231) on Indexed(25) BOLD
 1  71..81  Green
 1  81..82  DarkGray
 2   0..10  Green
 2  10..11  DarkGray
 2  21..31  Green
 2  31..32  DarkGray
 2  33..38  Green
 3   0..10  Green
 3  10..11  DarkGray
 3  21..31  Green
 3  31..32  DarkGray
 3  33..38  Green
 3  39..46  BOLD
 3  46..63  Red
 4   0..10  Green
 4  10..11  DarkGray
18   0..2   BOLD
18   2..5   DarkGray
18   5..13  Green
18  13..19  DarkGray
19   0..4   Cyan BOLD
19  11..12  Cyan BOLD
19  19..20  Cyan BOLD
19  28..33  Cyan BOLD
19  40..41  Cyan BOLD
19  49..50  Cyan BOLD
19  59..62  Cyan BOLD
19  71..72  Cyan BOLD
19  81..82  Cyan BOLD
19  89..90  Cyan BOLD
