crates/diskuse/tests/snapshots/in_c_200_wide@linux-d0-s0.snap
---
source: tests/browse.rs
---
/fixture  1.5 MiB | 2 folders unreadable (d) | scanned 0 s ago
   1.5 MiB  big/                 20.0 KiB+ b/                   12.0 KiB  c/                   12.0 KiB   100% f3
  32.0 KiB+ a/                    8.0 KiB  h1                    8.0 KiB  f2
   8.0 KiB  top                   8.0 KiB  h2                        0 B  … (denied: EACCES)
       0 B  empty/                4.0 KiB  f1
       0 B  … (denied: EACCES)
       0 B  sym











f3 | 12.0 KiB
hjkl move  i info  u units  space pick  p picks  r reveal  s/S rescan  / filter  t top  o open  ? help  q quit
--- styles ---
 0  10..17  BOLD
 0  17..20  DarkGray
 0  44..47  DarkGray
 1   0..10  Yellow
 1  10..11  DarkGray
 1  12..16  BOLD
 1  31..43  White on DarkGray
 1  43..45  White on DarkGray BOLD
 1  45..61  White on DarkGray
 1  62..74  White on DarkGray
 1  74..76  White on DarkGray BOLD
 1  76..92  White on DarkGray
 1  93..153 Indexed(231) on Indexed(25) BOLD
 2   0..12  White on DarkGray
 2  12..14  White on DarkGray BOLD
 2  14..30  White on DarkGray
 2  31..41  Green
 2  41..42  DarkGray
 2  62..72  Green
 2  72..73  DarkGray
 3   0..10  Green
 3  10..11  DarkGray
 3  31..41  Green
 3  41..42  DarkGray
 3  62..73  DarkGray
 3  74..75  DarkGray
 3  75..92  Red
 4   0..11  DarkGray
 4  12..18  BOLD
 4  31..41  Green
 4  41..42  DarkGray
 5   0..11  DarkGray
 5  12..13  DarkGray
 5  13..30  Red
 6   0..11  DarkGray
18   2..5   DarkGray
18   5..13  Green
19   0..4   Cyan BOLD
19  11..12  Cyan BOLD
19  19..20  Cyan BOLD
19  28..33  Cyan BOLD
19  40..41  Cyan BOLD
19  49..50  Cyan BOLD
19  59..62  Cyan BOLD
19  71..72  Cyan BOLD
19  81..82  Cyan BOLD
19  88..89  Cyan BOLD
19  96..97  Cyan BOLD
19 104..105 Cyan BOLD
